# nbodySimulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CUDA/: physicsEngine.cu
include/: Shader.h  Sphere.h  physicsEngine.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: Shader.cpp  Sphere.cpp  glad.c  main.cpp
